# czech_air_quality

./: CHANGELOG.md  pyproject.toml  setup.cfg
src/: airquality.py  data_manager.py
src/czech_air_quality/: __init__.py
